Temporarily disable other tests, use latest maven version for hibernate,db2